# OptiDiff-Mat

./: LICENSE  README.md  pyproject.toml  setup.py
src/optidiff_mat/: __init__.py  train_ddpm_lattice.py  train_schnet_predictive_baseline.py
src/optidiff_mat/data/: __init__.py
src/optidiff_mat/models/: __init__.py
src/optidiff_mat/utils/: __init__.py
tests/: __init__.py  test_basic.py
