[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optidiff-mat"
version = "0.1.0"
description = "Neural Diffusion Models for Optical-Property Guided Materials Discovery"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Kasperjoergensen3", email = "your.email@example.com"}
]
maintainers = [
    {name = "Kasperjoergensen3", email = "your.email@example.com"}
]
keywords = ["diffusion", "materials", "optical-properties", "neural-networks", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    # Core dependencies will be added as the project develops
    "numpy",
    "torch",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/Kasperjoergensen3/OptiDiff-Mat"
Repository = "https://github.com/Kasperjoergensen3/OptiDiff-Mat"
Issues = "https://github.com/Kasperjoergensen3/OptiDiff-Mat/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]


#project scripts can be added here in the future
[project.scripts]
optidiff-mat-train_schnet_predictive_baseline = "optidiff_mat.train_schnet_predictive_baseline:main"